--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <section id="TouchingSection">
       <div class="text-container">
         <p id="ConfessionTalk"></p>
-        <img src="./img/message.png" style="max-width: 100%;">
+        <img src="./img/message.png" style="border-radius: 6px; max-width: 100%;">
 
       </div>
     </section>
